# vortex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  vortex.py
.github/workflows/: ci.yml  test.yml
doc/: Documentation.ipynb  Documentation_Part_1.ipynb  doc-requirements.txt
py/: play.py  requirements.txt  vortex.py
py-tidal/: setup.py
py-tidal-num/: setup.py
py-tidal-num/py_tidal_num/: __init__.py  old_vortex_numpy.py  vortex_numpy.py  vortex_translate.py
py-tidal/py_tidal/: 1  log  play.py  requirements.txt  vortex.py
py-vortex/: requirements.txt  setup.py
py-vortex/py_vortex/: __init__.py  boot.py  control.py  grammar.py  gui.py  parse.py  pattern.py  play.py  repl.py  stream.py  utils.py  vortex.py
py-vortex/py_vortex/console/: vortex.py
py_vortex/: __init__.py  boot.py  pattern.py
test/: test-requirements.txt  test_functions.py  test_mini.py  test_mini_interpreter.py  test_mini_parser.py  test_pattern.py  test_py_vortex.py  test_small.py
vortex/: __init__.py  boot.py  cli.py  control.py  euclid.py  gui.py  pattern.py  repl.py  stream.py  utils.py  vortex.py
vortex/mini/: __init__.py  grammar.py  interpreter.py  small.py  visitor.py
