[tool.poetry]
name = "vortex"
version = "0.0.1"
description = "Python port of TidalCycles"
authors = ["Tidal Cyclists"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
parsy = "^1.4.0"
LinkPython = "^0.1.1"
pyliblo3 = "^0.13.0"
ipython = "^8.4.0"
PyQt5 = "^5.15.7"
QScintilla = "^2.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
