[tool.poetry]
name = "vortex"
version = "0.0.1"
description = "Python port of TidalCycles"
authors = ["Tidal Cyclists <vortex@tidalcycles.org>"]
repository = "https://github.com/tidalcycles/vortex"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
parsy = "^1.4.0"
LinkPython = "^0.1.1"
pyliblo3 = "^0.13.0"
ipython = "^8.4.0"
PyQt5 = { version = "^5.15.7", optional = true }
QScintilla = { version = "^2.13.3", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-reorder = "^0.1.1"

[tool.poetry.scripts]
vortex = 'vortex.cli:run'

[tool.poetry.extras]
gui = ["PyQt5", "QScintilla"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
